--- a/src/partials/form.html
+++ b/src/partials/form.html
@@ -1,6 +1,6 @@
 <div class="form" method = "POST">
     <div class="form_header">
-        <img src="images/form-icono.png" alt="form_icon">
+        <img src="/images/001-cocinando.png" alt="form_icon" class="icon-size">
         <h1>Rellena</h1>
     </div>
 
@@ -8,21 +8,21 @@
 
         <form class="form_container-sign" method = "POST">
             <div class="form_container-sign-field">
-                <label for="firstName">Nombre y apellidos</label>
+                <label for="firstName" >Nombre y apellidos</label>
                 <input class="campo" type="text" name="firstName" data-id="form_container-result-name" placeholder="Introduce tu nombre y apellidos"/>
             </div>
 
               <div class="form_container-sign-field">
-                <label for="firstName">Propuesta</label>
+                <label for="firstName" >Propuesta</label>
                 <input class="campo" type="text" name="proposal" data-id="form_container-result-proposal" placeholder="¡Defiende tu plato!"/>
             </div>
 
               <div class="form_container-sign-field">
-                <label for="file">Foto plato</label>
+                <label for="file" >Foto plato</label>
                 <input class="campo" type="file" accept=".jpg, .jpeg, .png" name="selectImage" onchange="mostrarPrevisualizacion(event)" data-id="form_container-result-photo"/>
             </div>
             <div class="form_container-sign-field">
-                <label for="city">Ciudad</label>
+                <label for="city" >Ciudad</label>
                 <input class="campo" type="text" name="city" data-id="form_container-result-city" placeholder="¿De dónde vienes?"/>
             </div>
             <div class="form_container-sign-field">
