--- a/src/scss/layout/form.scss
+++ b/src/scss/layout/form.scss
@@ -1,3 +1,5 @@
+@use '../core/variables' as vars;
+
 .form {
     width: 80rem ;
     height: 80rem ;
@@ -9,19 +11,24 @@
     display: flex;
     flex-direction: row;
     gap: 1rem;
-
+    .icon-size {
+        width: 80px;
+    }
 }
 
 .form_header h1 {
     color: black;
     margin-top: 0.5rem;
-    font-family: Garamond, serif;
-    font-weight: none;
+    font-family: vars.$font-main;
+    font-weight: 400
+    
+    
     
 }
 
 .form_container {
     display: flex;
+    
     flex-direction: column;
     gap: 6rem;
     margin-left: 4rem;
@@ -40,12 +47,12 @@
 
 .form_container-sign-field label {
     color: black;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: vars.$font-secondary;
     margin-top: 0.5rem;
 }
 
 .campo {
-    border-color: orange;
+    border-color: vars.$color-secondary;
     border-radius: 2rem;
     border-style: solid;
     border-width: 0.2rem;
@@ -60,7 +67,8 @@
 }
 
 #form_container-result h3 {
-    color: black;
+    color: vars.$color-secondary;
+    font-family: vars.$font-main;
     text-align: center;
     
 }
@@ -73,6 +81,9 @@
     
 }
 
+input::placeholder {
+    font-family: vars.$font-secondary;
+}
 //MEDIA QUERIES
 
 
