Corrections on landing page, when we merge form and landing page

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,5 +1,5 @@
 <footer class="page__footer">
-  <small>
+  <small class="copy-footer">
     &copy; 2026 Sabor Extremo. Todos los derechos reservados.
     <load
       src="/partials/link.html"
