--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,12 +1,17 @@
 @use '../core/variables' as vars;
 
 .page__footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
+    
     width: 100vw;
     padding: 1rem;
     color: white;
+    
     font-family: vars.$font-secondary;
     background-color:vars.$color-primary-dark;
+    
+    
+}
+
+.copy-footer {
+    padding: 1rem;
 }
