--- a/src/scss/layout/_page.scss
+++ b/src/scss/layout/_page.scss
@@ -1,15 +1,25 @@
 @use '../core/variables' as vars;
 
+html, body {
+    height: 100%;
+    margin: 0;
+}
+.page {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  overflow: hidden;
+}
+
 body {
-    display: flex;
-    align-items: flex-start;
-    justify-content: center;
-    height: 100vh;
+    margin: 0;
+    padding: 0;
+    
     background-image: url("/images/background-marco-vegetal.jpg");
-    background-size: 100%;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-
+    
+    
 }
 
