--- a/src/partials/form.html
+++ b/src/partials/form.html
@@ -19,7 +19,11 @@
 
               <div class="form_container-sign-field">
                 <label for="file">Foto plato</label>
-                <input class="campo" type="file" accept=".jpg, .jpeg, .png" name="selectImage" onchange="mostrarPrevisualizacion(event)" data-id="form_container-result-photo"/>
+                
+                <input class="campo" type="file" accept="image/*" name="selectImage" data-id="form_container-result-photo"/>
+
+                
+
             </div>
             <div class="form_container-sign-field">
                 <label for="city">Ciudad</label>
