--- a/src/partials/main.html
+++ b/src/partials/main.html
@@ -22,7 +22,7 @@
     </div> 
   
   </div>
-  <a class="landing-button button-style" href="form_index.html">
+  <a class="landing-button button-style" href="index-copy.html">
     ¡APÚNTATE!
   </a>
 
