--- a/src/scss/layout/form.scss
+++ b/src/scss/layout/form.scss
@@ -1,13 +1,14 @@
 @use '../core/variables' as vars;
 
 .form {
-    width: 80rem ;
-    height: 80rem ;
-    
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
 }
 
 .form_header {
+    margin: 3rem;
     display: flex;
     flex-direction: row;
     gap: 1rem;
@@ -31,7 +32,7 @@
     
     flex-direction: column;
     gap: 6rem;
-    margin-left: 4rem;
+    margin-left: 8rem;
     
 }
 
