creating checkbox, choosing background, let's continue

--- a/src/partials/form-checkbox.html
+++ b/src/partials/form-checkbox.html
@@ -31,7 +31,7 @@
         </div>
     </div>
 
-    <img src="/images/Background-dibus.png" alt="Fondo tarjeta resultado" class="background1">
+    <img src='/images/photo-cupcake-original.png' alt="Fondo tarjeta resultado" class="background1">
 
 
     
