button and arrow

--- a/src/partials/form.html
+++ b/src/partials/form.html
@@ -49,3 +49,19 @@
 
     </div>
 </div>
+
+
+<div class="panel">
+  <div class="panel-header">
+    <div class="title">
+      <img src="images/003-bandeja.png" class="panel-icon">
+      <span>COMPARTE</span>
+      <span class="arrow"></span>
+    </div>
+  </div>
+
+  <div class="panel-content">
+    <button class="card_button">¡APÚNTATE!</button>
+  </div>
+</div>
+
