--- a/src/partials/form.html
+++ b/src/partials/form.html
@@ -27,7 +27,7 @@
             </div>
             <div class="form_container-sign-field">
                 <label for="phone">Teléfono</label>
-                <input class="campo" type="tel" name="phone" placeholder="123-456-789" data-id="form_container-result-phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" required><br><br>
+                <input class="number" type="tel" name="phone" placeholder="123-456-789" data-id="form_container-result-phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" required><br><br>
             </div>
              <div class="form_container-sign-field">
                 <label for="email">Email</label>
