--- a/src/partials/form.html
+++ b/src/partials/form.html
@@ -19,7 +19,7 @@
 
               <div class="form_container-sign-field">
                 <label for="file" >Foto plato</label>
-                <input class="campo" type="file" accept=".jpg, .jpeg, .png" name="selectImage" onchange="mostrarPrevisualizacion(event)" data-id="form_container-result-photo"/>
+                <input class="campo" type="file" accept="image/*" name="selectImage" data-id="form_container-result-photo"/>
             </div>
             <div class="form_container-sign-field">
                 <label for="city" >Ciudad</label>
@@ -27,7 +27,7 @@
             </div>
             <div class="form_container-sign-field">
                 <label for="phone">Teléfono</label>
-                <input class="number" type="tel" name="phone" placeholder="123-456-789" data-id="form_container-result-phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" required><br><br>
+                <input class="campo" type="number" name="phone" placeholder="123-456-789" data-id="form_container-result-phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" required><br><br>
             </div>
              <div class="form_container-sign-field">
                 <label for="email">Email</label>
@@ -40,7 +40,9 @@
         <div class="form_container-result-list">
             <li id="form_container-result-name"></li>
             <li id="form_container-result-proposal"></li>
-            <li id="form_container-result-photo"></li>
+            <li>
+                <img id="form_container-result-photo">
+            </li>
             <li id="form_container-result-city"></li>
             <li id="form_container-result-phone"></li>
             <li id="form_container-result-mail"></li>
