--- a/src/partials/form.html
+++ b/src/partials/form.html
@@ -31,7 +31,7 @@
             </div>
              <div class="form_container-sign-field">
                 <label for="email">Email</label>
-                <input  class="campo" type="email" name="email" data-id="form_container-result-mail" placeholder="Introduce tu email"/>
+                <input  class="campo" type="email" name="email" data-id="form_container-result-mail" placeholder="ejemplo@correo.com"/>
             </div>
         </form>
 
