create 'propuesta' container, with the changing background

--- a/src/scss/layout/_form-checkbox.scss
+++ b/src/scss/layout/_form-checkbox.scss
@@ -3,29 +3,36 @@
 .form-checkbox {
     display: flex;
     flex-direction: column;
-    
     margin: 4rem;
-    .form-checkbox-title {
+    .form-checkbox_labels {
+        margin-left: 5rem;
+    }
+    .form-checkbox_titleAndIcon {
+        display: flex;
+        flex-direction: row;
+        gap: 1rem;
+        align-items: center;
+
+        .form-checkbox_title {
         color: vars.$color-secondary;
     }
+    }
+    
 }
+
+
 label {
     font-family: vars.$font-secondary;
 }
 
 //color del checkbox
-input[type="checkbox"] {
+input[type="radio"] {
   accent-color: vars.$color-primary-dark;
   } 
-
-  img {
-    
-  }
 .background1 {
     width: 500px;
     
 }
-
 
 .form-checkbox_container {
     display: flex;
@@ -34,6 +41,3 @@ input[type="checkbox"] {
     padding: 2rem;
 }
 
-.background2 {
-    background-image: url(/images/background-marco-vegetal.jpg);
-}
