--- a/src/partials/form-checkbox.html
+++ b/src/partials/form-checkbox.html
@@ -1,34 +1,47 @@
 <div class="form-checkbox_container"> 
+
     <div class="form-checkbox">
-        <h3 class="form-checkbox-title">Elige tu propuesta de plato</h3>
-        <div >
-        <label for="option1">
-            <input
-            id="input-option1"
-            type="checkbox"
-            />
-            Entrante
-        </label>
+
+        <div class="form-checkbox_titleAndIcon">
+            <img src="/images/001-cocinando.png" class="panel-icon" alt="Icono ingredientes">
+            <h3 class="form-checkbox_title">Elige tu propuesta de plato</h3>
         </div>
 
-        <div>
-        <label for="option2">
-            <input
-            id="input-option2"
-            type="checkbox"
-            />
-            Plato principal
-        </label>
+        <div class="form-checkbox_labels">
+            <div>
+                <label for="option1">
+                    <input
+                    id="input-option1"
+                    type="radio"
+                    name="option"
+                    />
+                    Entrante
+                </label>
+            </div>
+
+            <div>
+                <label for="option2">
+                    <input
+                    id="input-option2"
+                    type="radio"
+                    name="option"
+                    />
+                    Plato principal
+                </label>
+            </div>
+            <div>
+                <label for="option3">
+                    <input
+                    id="input-option3"
+                    type="radio" 
+                    name="option"
+                    />
+                    Postre
+                </label>
+            </div>
+
         </div>
-        <div>
-        <label for="option3">
-            <input
-            id="input-option3"
-            type="checkbox"
-            />
-            Postre
-        </label>
-        </div>
+
     </div>
 
     <img src='/images/photo-cupcake-original.png' alt="Fondo tarjeta resultado" class="background1">
