--- a/src/partials/form.html
+++ b/src/partials/form.html
@@ -1,8 +1,10 @@
+<div class="panel">
+    
+
+    
+</div>
+
 <div class="form" method = "POST">
-    <div class="form_header">
-        <img src="/images/001-cocinando.png" alt="form_icon" class="icon-size">
-        <h1>Rellena</h1>
-    </div>
 
     <div class="form_container">
 
