--- a/src/partials/form.html
+++ b/src/partials/form.html
@@ -1,7 +1,5 @@
 <div class="panel">
     
-
-    
 </div>
 
 <div class="form" method = "POST">
@@ -37,21 +35,23 @@
             </div>
         </form>
 
-        <ul id="form_container-result">
+        <div id="form_container-result">
             <h3>¿TE GUSTA COCINAR?</h3>
-        <div class="form_container-result-list">
-            <li id="form_container-result-name"></li>
-            <li id="form_container-result-proposal"></li>
-            <li>
-                <img id="form_container-result-photo">
-            </li>
-            <li id="form_container-result-city"></li>
-            <li id="form_container-result-phone"></li>
-            <li id="form_container-result-mail"></li>
-        </div>
-        </ul>
+            <div class="form_container-result-content">
+                <ul class="form_container-result-list">
+                    <li id="form_container-result-name"></li>
+                    <li id="form_container-result-proposal"></li>
+                    <li id="form_container-result-city"></li>
+                    <li id="form_container-result-phone"></li>
+                    <li id="form_container-result-mail"></li>
+                </ul>
 
-    </div>
+                <li class="form_container-result-list-image">
+                    <img id="form_container-result-photo" height="150px" width="220px">
+                </li>
+            </div>
+        </div>
+         </div>
 </div>
 
 <div class="panel">
