--- a/src/scss/layout/form.scss
+++ b/src/scss/layout/form.scss
@@ -1,14 +1,13 @@
 @use '../core/variables' as vars;
 
 
-
 .form {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 80rem ;
-    height: 80rem ;
-    
+    width: 80rem;
+    height: 80rem; 
+  
 
 }
 
@@ -27,28 +26,28 @@
     margin-top: 0.5rem;
     font-family: vars.$font-main;
     font-weight: 400
-    
-    
-    
+ 
 }
 
 .form_container {
     display: flex;
     flex-direction: column;
-    margin-left: 40rem;
-    
-    
+    justify-content:center;
+    margin-right: 4rem;
+    width: 4rem;
+    margin: 5rem;
     
 }
 
-
+.form_container-sign {
+    margin-left: 10rem;
+}
 
 .form_container-sign-field {
     display: flex;
     flex-direction: column;
     width: 480px;
     gap: 0.2rem;
-    
 }
 
 .form_container-sign-field label {
@@ -66,30 +65,75 @@
     background-color: #FAEBD7;
 }
 
-#form_container-result {
-    list-style-type: none;
+.form_container-result-content {
     width: 19rem;
     height: 25rem;
+    margin-top: 1rem;
+    display: flex;
+    flex-direction: row;
+    
+ 
+    
+
+    
 }
 
 #form_container-result h3 {
     color: vars.$color-secondary;
     font-family: vars.$font-main;
     text-align: center;
+    margin-top: -1.5rem;
+    padding: 1rem;
+   
+    
+
     
 }
-#form_container-result li {
+
+.form_container-result-list {
+    margin-right: 4rem;
+}
+
+
+.form_container-result-list li {
+    list-style-type: none;
+    line-height: 2rem;
+     width: 10rem;
+     margin-right: 9rem;
+    
+}
+
+#form_container-result-photo {
+    margin-left: -14rem;
+}
+
+
+
+.form_container-result li {
     margin-top: 3rem;
     color: black;
     text-align: center;
     margin-bottom: 2rem;
     font-weight: bold;
+  
+   
+   
     
+    
+    
+}
+
+.form_container-result-list-image {
+
 }
 
 input::placeholder {
     font-family: vars.$font-secondary;
 }
+
+
+
+
 //MEDIA QUERIES
 
 
