Create reset button,done

--- a/src/partials/form-checkbox.html
+++ b/src/partials/form-checkbox.html
@@ -46,6 +46,6 @@
 
     <img src='/images/photo-cupcake-original.png' alt="Fondo tarjeta resultado" class="background1">
 
-
+<button class="button-style" id="button_reset">RESET</button>
     
 </div>
