Redistribution of elements when merge branches

--- a/src/partials/form.html
+++ b/src/partials/form.html
@@ -1,7 +1,6 @@
-<div class="panel">
-    
-
-    
+<div class="form-checkbox_titleAndIcon">
+            <img src="/images/002-maceta.png" class="panel-icon" alt="Icono cocinando">
+            <h3 class="form-checkbox_title">Rellena tus datos</h3>
 </div>
 
 <div class="form" method = "POST">
