--- a/src/scss/layout/form.scss
+++ b/src/scss/layout/form.scss
@@ -1,15 +1,12 @@
 @use '../core/variables' as vars;
 
 
-
 .form {
     display: flex;
     align-items: center;
-    justify-content: center;
-    width: 80rem ;
-    height: 80rem ;
-    
-
+    margin: 0;
+    pad: 0;
+    margin-left: 5rem;
 }
 
 .form_header {
@@ -27,32 +24,20 @@
     margin-top: 0.5rem;
     font-family: vars.$font-main;
     font-weight: 400
-    
-    
-    
 }
 
 .form_container {
     display: flex;
     flex-direction: column;
-    margin-left: 40rem;
-    
-    
-    
 }
-
-
 
 .form_container-sign-field {
     display: flex;
     flex-direction: column;
-    width: 480px;
     gap: 0.2rem;
-    
 }
 
 .form_container-sign-field label {
-    
     font-family: vars.$font-secondary;
     margin-top: 0.5rem;
 }
@@ -90,22 +75,13 @@
 input::placeholder {
     font-family: vars.$font-secondary;
 }
-//MEDIA QUERIES
 
+//MEDIA QUERIES
 
 @media (min-width: 768px) {
 
-    
-
     .form_container {
         flex-direction: row;
-    }
-
-    .form_container-sign {
-        width: 768px;
-        
-        
-        
     }
 
     .form_container-sign-field {
@@ -114,7 +90,6 @@ input::placeholder {
 
    #form_container-result {
     list-style-type: none;
-
   
    }
     
@@ -129,10 +104,6 @@ input::placeholder {
         
     }
 
-    .form_container-sign {
-        width: 768px;
-    }
-
     .form_container-sign-field {
         flex-direction: row;
         padding: 1rem;
@@ -145,22 +116,13 @@ input::placeholder {
         height: auto;
         margin: 2rem;
     }
-
-    .form {
-  
-    width: 80rem ;
-    height: 39rem;
-    }
 }
-
-
-
 
 /* PANEL */
 .panel {
   width: 80rem;
-  margin-left: 17rem;
-  margin-top: -5rem;
+  
+ 
 }
 
 /* HEADER */
@@ -196,7 +158,7 @@ input::placeholder {
   border-right: 3px solid vars.$color-secondary;
   border-bottom: 3px solid vars.$color-secondary;
   transform: rotate(-135deg);
-  margin-left: 10px;
+  
   transition: transform 0.35s ease;
 }
 
@@ -210,6 +172,7 @@ input::placeholder {
   max-height: 0;
   opacity: 0;
   padding: 0 1rem;
+  margin-left: 5rem;
   transition: max-height 0.4s ease, opacity 0.3s ease, padding 0.3s ease;
 }
 
