--- a/src/scss/layout/form.scss
+++ b/src/scss/layout/form.scss
@@ -55,6 +55,9 @@
     list-style-type: none;
     width: 19rem;
     height: 25rem;
+    
+    
+    
 }
 
 #form_container-result h3 {
@@ -136,11 +139,10 @@ input::placeholder {
   display: flex;
   align-items: center;
   gap: 1rem;
-  color: black;
-  margin-top: 0.5rem;
-  font-family: vars.$font-main;
-  font-weight: 400;
-  font-size: 1.25rem;
+  color: vars.$color-secondary;
+  font-family: vars.$font-secondary;
+  font-weight: 800;
+  font-size: 1.5rem;
 }
 
 /* ICONO */
@@ -197,7 +199,7 @@ input::placeholder {
   border: 2px solid #000;
   border-radius: 999px;
   cursor: pointer;
-  transition: all 0.25s ease;
+  transition: all 0.50s ease;
 }
 
 .card_button:hover {
