position background and text in preview

--- a/src/partials/card-preview.html
+++ b/src/partials/card-preview.html
@@ -1,6 +1,6 @@
 <div class="card-preview">
 
-    <ul id="form_container-result">
+    <ul id="form_container-result" class="absolute">
                     <h3>¿TE GUSTA COCINAR?</h3>
                 <div class="form_container-result-list">
                     <li id="form_container-result-name"></li>
