make changes in preview

--- a/src/partials/card-preview.html
+++ b/src/partials/card-preview.html
@@ -13,11 +13,13 @@
                     <li id="form_container-result-mail"></li>
                 </div>
     </ul>
-
+    <div class="container-blur"></div>
     <div class="page_card-preview">
-        <img src='/images/photo-cupcake-original.png' alt="Fondo tarjeta resultado" class="backgroundImage background1">
+        <img src='/images/photo-cupcake-original.png' 
+        alt="Fondo tarjeta resultado" 
+        class="backgroundImage background1">
 
-        <button class="button-style" id="button_reset">RESET</button>
+        <button class="button-style button-style--reset" id="button_reset">RESET</button>
     </div>
 
 </div>
