--- a/src/partials/form.html
+++ b/src/partials/form.html
@@ -9,7 +9,7 @@
         <form class="form_container-sign" method = "POST">
             <div class="form_container-sign-field">
                 <label for="firstName" >Nombre y apellidos</label>
-                <input class="campo" type="text" name="firstName" data-id="form_container-result-name" placeholder="Introduce tu nombre y apellidos"/>
+                <input class="campo" type="text" name="firstName" data-id="form_container-result-name" placeholder="¡Preséntate!"/>
             </div>
 
               <div class="form_container-sign-field">
