--- a/src/partials/card-preview.html
+++ b/src/partials/card-preview.html
@@ -1,16 +1,19 @@
 <div class="card-preview">
 
     <ul id="form_container-result" class="absolute">
-                    <h3>¿TE GUSTA COCINAR?</h3>
-                <div class="form_container-result-list">
-                    <li id="form_container-result-name"></li>
-                    <li id="form_container-result-proposal"></li>
+                <h3 class="fixed">¿TE GUSTA COCINAR?</h3>
+                <div class="form_container-result-preview">
+                    <div class="form_container-result-list">
+                        <li id="form_container-result-name"></li>
+                        <li id="form_container-result-proposal"></li>
+                        
+                        <li id="form_container-result-city"></li>
+                        <li id="form_container-result-phone"></li>
+                        <li id="form_container-result-mail"></li>
+                    </div>
                     <li>
                         <img id="form_container-result-photo">
                     </li>
-                    <li id="form_container-result-city"></li>
-                    <li id="form_container-result-phone"></li>
-                    <li id="form_container-result-mail"></li>
                 </div>
     </ul>
 
