--- a/src/partials/share.html
+++ b/src/partials/share.html
@@ -3,7 +3,7 @@
   <div class="panel-header">
     <div class="title">
       <img src="images/003-bandeja.png" class="panel-icon" alt="icono comparte">
-      <span>COMPARTE</span>
+      <span>Comparte</span>
       <span class="arrow"></span>
     </div>
   </div>
