--- a/src/scss/layout/card-preview.scss
+++ b/src/scss/layout/card-preview.scss
@@ -11,19 +11,44 @@
     display: flex;
     flex-direction: column;
     gap: 3rem;
-    width: 40rem;
+    width: 40rem;  
+}
+#form_container-result {
+
+}
+#form_container-result h3 {
+    color: vars.$color-secondary;
+    font-family: vars.$font-main;
+    text-align: center;
     
 }
-
-.absolute {
-    position: absolute;
-}
-
 .card-preview {
     position: relative;
     display: flex;
+    
     align-items: center;
+    justify-content: center;
+    
+;
 }
+.form_container-result-preview {
+    display: flex;
+    position: relative;
+  
+}
+.absolute {
+    position: absolute;
+    top: 23%;
+    
+}
+
+
+.page_card-preview {
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    gap: 1rem
+   }
 
 .background1 {
     width: 600px;
@@ -42,14 +67,6 @@
         color:vars.$color-primary-dark; ;
     }
 }
-
-
-.page_card-preview {
-    display: flex;
-    flex-direction: column;
-    align-items: end;
-    gap: 1rem
-   }
 
 .blur {
    filter: blur(5px);
