last DOM changes to look good

--- a/src/partials/card-preview.html
+++ b/src/partials/card-preview.html
@@ -1,17 +1,16 @@
 <div class="card-preview">
 
     <ul id="form_container-result" class="absolute">
-                <h3 class="fixed">¿TE GUSTA COCINAR?</h3>
+                <h3 class="fixed">Datos de información</h3>
                 <div class="form_container-result-preview">
-                    <div class="form_container-result-list">
-                        <li id="form_container-result-name"></li>
-                        <li id="form_container-result-proposal"></li>
-                        
-                        <li id="form_container-result-city"></li>
-                        <li id="form_container-result-phone"></li>
-                        <li id="form_container-result-mail"></li>
+                    <div class="form_container-result-list style-preview" >
+                        <li id="form_container-result-name" class="style-preview"></li>
+                        <li id="form_container-result-proposal" class="style-preview"></li>
+                        <li id="form_container-result-city" class="style-preview"></li>
+                        <li id="form_container-result-phone" class="style-preview"></li>
+                        <li id="form_container-result-mail" class="style-preview"></li>
                     </div>
-                    <li>
+                    <li class="liPhoto">
                         <img id="form_container-result-photo">
                     </li>
                 </div>
@@ -19,9 +18,10 @@
 
     
     <div class="page_card-preview">
-        <img src='/images/photo-cupcake-original.png' 
+        <div class=".blur"></div>
+        <img src='/images/Background-example.png' 
         alt="Fondo tarjeta resultado" 
-        class="backgroundImage background1">
+        class="backgroundImage background1 style-preview-photo">
 
         <button class="button-style button-style--reset" id="button_reset">RESET</button>
     </div>
