--- a/src/scss/layout/form.scss
+++ b/src/scss/layout/form.scss
@@ -61,15 +61,16 @@
 
 
 
-.form_container-result-list {
-    margin-right: 4rem;
-}
+
 
 
 .form_container-result-list li {
     list-style-type: none;
     line-height: 2rem;
        
+}
+.liPhoto {
+    list-style-type: none;
 }
 
 .form_container-result li {
