--- a/src/partials/share.html
+++ b/src/partials/share.html
@@ -1,8 +1,7 @@
 <div class="panel">
-
   <div class="panel-header">
     <div class="title">
-      <img src="images/003-bandeja.png" class="panel-icon" alt="icono comparte">
+      <img src="images/003-bandeja.png" class="panel-icon">
       <span>COMPARTE</span>
       <span class="arrow"></span>
     </div>
@@ -10,5 +9,6 @@
 
   <div class="panel-content">
     <button class="card_button">¡APÚNTATE!</button>
+    <a class="share_link" target="_blank"></a>
   </div>
 </div>
