--- a/src/partials/form-checkbox.html
+++ b/src/partials/form-checkbox.html
@@ -1,4 +1,4 @@
-<div class="page_form-checkbox"> 
+<div class="form-checkbox_container"> 
 
     <div class="form-checkbox">
 
@@ -44,6 +44,8 @@
 
     </div>
 
-    
+    <img src='/images/photo-cupcake-original.png' alt="Fondo tarjeta resultado" class="background1">
+
+
     
 </div>
