--- a/src/scss/layout/_form-checkbox.scss
+++ b/src/scss/layout/_form-checkbox.scss
@@ -3,13 +3,11 @@
 .form-checkbox {
     display: flex;
     flex-direction: column;
-    
+    margin: 4rem;
     .form-checkbox_labels {
         margin-left: 5rem;
     }
-    
-}
-.form-checkbox_titleAndIcon {
+    .form-checkbox_titleAndIcon {
         display: flex;
         flex-direction: row;
         gap: 1rem;
@@ -20,6 +18,9 @@
     }
     }
     
+}
+
+
 label {
     font-family: vars.$font-secondary;
 }
@@ -28,11 +29,15 @@ label {
 input[type="radio"] {
   accent-color: vars.$color-primary-dark;
   } 
-
-
-.page_form-checkbox {
-    display: flex;
-    flex-direction: row;
-    
+.background1 {
+    width: 500px;
     
 }
+
+.form-checkbox_container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    padding: 2rem;
+}
+
