--- a/src/scss/layout/form.scss
+++ b/src/scss/layout/form.scss
@@ -1,11 +1,15 @@
 @use '../core/variables' as vars;
 
 
+
 .form {
     display: flex;
     align-items: center;
+    justify-content: center;
+    width: 80rem ;
+    height: 80rem ;
     
-    margin-left: 5rem;
+
 }
 
 .form_header {
@@ -23,29 +27,32 @@
     margin-top: 0.5rem;
     font-family: vars.$font-main;
     font-weight: 400
+    
+    
+    
 }
 
 .form_container {
     display: flex;
     flex-direction: column;
-    justify-content:center;
-    width: 4rem;
-    margin-left: 5rem;
+    margin-left: 40rem;
+    
+    
     
 }
 
-.form_container-sign {
-    margin-left: 15rem;
-}
+
 
 .form_container-sign-field {
     display: flex;
     flex-direction: column;
     width: 480px;
-    gap: 0.5rem;
+    gap: 0.2rem;
+    
 }
 
 .form_container-sign-field label {
+    
     font-family: vars.$font-secondary;
     margin-top: 0.5rem;
 }
@@ -59,46 +66,57 @@
     background-color: #FAEBD7;
 }
 
-
-
-
-
-
-.form_container-result-list li {
+#form_container-result {
     list-style-type: none;
-    line-height: 2rem;
-       
-}
-.liPhoto {
-    list-style-type: none;
+    width: 19rem;
+    height: 25rem;
 }
 
-.form_container-result li {
+#form_container-result h3 {
+    color: vars.$color-secondary;
+    font-family: vars.$font-main;
+    text-align: center;
     
+}
+#form_container-result li {
+    margin-top: 3rem;
     color: black;
     text-align: center;
     margin-bottom: 2rem;
     font-weight: bold;
-     
+    
 }
 
 input::placeholder {
     font-family: vars.$font-secondary;
 }
-
 //MEDIA QUERIES
 
+
 @media (min-width: 768px) {
+
+    
 
     .form_container {
         flex-direction: row;
     }
 
-    .form_container-sign-field {
+    .form_container-sign {
+        width: 768px;
+        
+        
         
     }
 
-   
+    .form_container-sign-field {
+        flex-direction: row;
+    }
+
+   #form_container-result {
+    list-style-type: none;
+
+  
+   }
     
 }
 
@@ -111,20 +129,38 @@ input::placeholder {
         
     }
 
+    .form_container-sign {
+        width: 768px;
+    }
+
     .form_container-sign-field {
         flex-direction: row;
         padding: 1rem;
         
     }
 
-   
+    #form_container-result {
+        height: 10rem;
+        width: 30rem;
+        height: auto;
+        margin: 2rem;
+    }
+
+    .form {
+  
+    width: 80rem ;
+    height: 39rem;
+    }
 }
+
+
+
 
 /* PANEL */
 .panel {
   width: 80rem;
-  
- 
+  margin-left: 17rem;
+  margin-top: -5rem;
 }
 
 /* HEADER */
@@ -138,10 +174,11 @@ input::placeholder {
   display: flex;
   align-items: center;
   gap: 1rem;
-  color: vars.$color-secondary;
-  font-family: vars.$font-secondary;
-  font-weight: 800;
-  font-size: 1.5rem;
+  color: black;
+  margin-top: 0.5rem;
+  font-family: vars.$font-main;
+  font-weight: 400;
+  font-size: 1.25rem;
 }
 
 /* ICONO */
@@ -159,7 +196,7 @@ input::placeholder {
   border-right: 3px solid vars.$color-secondary;
   border-bottom: 3px solid vars.$color-secondary;
   transform: rotate(-135deg);
-  
+  margin-left: 10px;
   transition: transform 0.35s ease;
 }
 
