--- a/src/partials/form-checkbox.html
+++ b/src/partials/form-checkbox.html
@@ -1,4 +1,4 @@
-<div class="form-checkbox_container"> 
+<div class="page_form-checkbox"> 
 
     <div class="form-checkbox">
 
@@ -44,8 +44,6 @@
 
     </div>
 
-    <img src='/images/photo-cupcake-original.png' alt="Fondo tarjeta resultado" class="background1">
-
-
+    
     
 </div>
