--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -7,5 +7,6 @@
 @use 'layout/form';
 @use 'pages/landing-page';
 @use 'layout/form-checkbox';
+@use 'layout/card-preview';
 @use 'layout/share';
-@use 'layout/card';
+
