--- a/src/partials/form.html
+++ b/src/partials/form.html
@@ -1,56 +1,51 @@
-<div class="panel">
-    
-
-    
-</div>
-
-<div class="form" method = "POST">
-
-    <div class="form_container">
-
-        <form class="form_container-sign" method = "POST">
-            <div class="form_container-sign-field">
-                <label for="firstName" >Nombre y apellidos</label>
-                <input class="campo" type="text" name="firstName" data-id="form_container-result-name" placeholder="Introduce tu nombre y apellidos"/>
-            </div>
-
-              <div class="form_container-sign-field">
-                <label for="firstName" >Propuesta</label>
-                <input class="campo" type="text" name="proposal" data-id="form_container-result-proposal" placeholder="¡Defiende tu plato!"/>
-            </div>
-
-              <div class="form_container-sign-field">
-                <label for="file" >Foto plato</label>
-                <input class="campo" type="file" accept="image/*" name="selectImage" data-id="form_container-result-photo"/>
-            </div>
-            <div class="form_container-sign-field">
-                <label for="city" >Ciudad</label>
-                <input class="campo" type="text" name="city" data-id="form_container-result-city" placeholder="¿De dónde vienes?"/>
-            </div>
-            <div class="form_container-sign-field">
-                <label for="phone">Teléfono</label>
-                <input class="campo" type="number" name="phone" placeholder="123-456-789" data-id="form_container-result-phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" required><br><br>
-            </div>
-             <div class="form_container-sign-field">
-                <label for="email">Email</label>
-                <input  class="campo" type="email" name="email" data-id="form_container-result-mail" placeholder="ejemplo@correo.com"/>
-            </div>
-        </form>
-
-        <ul id="form_container-result">
-            <h3>¿TE GUSTA COCINAR?</h3>
-        <div class="form_container-result-list">
-            <li id="form_container-result-name"></li>
-            <li id="form_container-result-proposal"></li>
-            <li>
-                <img id="form_container-result-photo">
-            </li>
-            <li id="form_container-result-city"></li>
-            <li id="form_container-result-phone"></li>
-            <li id="form_container-result-mail"></li>
-        </div>
-        </ul>
-
+<div class="page_form">
+    <div class="form-checkbox_titleAndIcon">
+                <img src="/images/002-maceta.png" class="panel-icon" alt="Icono cocinando">
+                <h3 class="form-checkbox_title">Rellena tus datos</h3>
     </div>
+
+    <div class="form">
+
+        <div class="form_container">
+
+            <form class="form_container-sign" method = "POST">
+                <div class="form_container-sign-field">
+                    <label for="firstName" >Nombre y apellidos</label>
+                    <input id="firstName" class="campo" type="text" name="firstName" data-id="form_container-result-name" placeholder="¡Preséntate!"/>
+                </div>
+
+                <div class="form_container-sign-field ">
+                    <label for="proposal" >Propuesta</label>
+                    <input id="proposal" class="campo " type="text" name="proposal" data-id="form_container-result-proposal" placeholder="¡Defiende tu plato!"/>
+                </div>
+
+                <div class="form_container-sign-field">
+                    <label for="file" >Foto plato</label>
+                    <input id="file" class="campo" type="file" accept="image/*" name="selectImage" data-id="form_container-result-photo"/>
+                </div>
+
+                <div class="form_container-sign-field">
+                    <label for="city" >Ciudad</label>
+                    <input id="city" class="campo" type="text" name="city" data-id="form_container-result-city" placeholder="¿De dónde vienes?"/>
+                </div>
+
+                <div class="form_container-sign-field">
+                    <label for="phone">Teléfono</label>
+                    <input class="campo" type="number" name="phone" placeholder="123-456-789" data-id="form_container-result-phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" required><br><br>
+                </div>
+                
+
+                <div class="form_container-sign-field">
+                    <label for="email">Email</label>
+                    <input id="email" class="campo" type="email" name="email" data-id="form_container-result-mail" placeholder="ejemplo@correo.com"/>
+                </div>
+
+                
+            </form>
+        </div>
+    </div>
+
+            
 </div>
+
 
