--- a/src/partials/share.html
+++ b/src/partials/share.html
@@ -1,14 +1,14 @@
 <div class="panel">
+
   <div class="panel-header">
     <div class="title">
-      <img src="images/003-bandeja.png" class="panel-icon">
-      <span>COMPARTE</span>
+      <img src="images/003-bandeja.png" class="panel-icon" alt="icono comparte">
+      <span>Comparte</span>
       <span class="arrow"></span>
     </div>
   </div>
 
   <div class="panel-content">
     <button class="card_button">¡APÚNTATE!</button>
-    <a class="share_link" target="_blank"></a>
   </div>
 </div>
