--- a/src/scss/layout/form.scss
+++ b/src/scss/layout/form.scss
@@ -1,15 +1,11 @@
 @use '../core/variables' as vars;
 
 
-
 .form {
     display: flex;
     align-items: center;
-    justify-content: center;
-    width: 80rem ;
-    height: 80rem ;
     
-
+    margin-left: 5rem;
 }
 
 .form_header {
@@ -27,32 +23,29 @@
     margin-top: 0.5rem;
     font-family: vars.$font-main;
     font-weight: 400
-    
-    
-    
 }
 
 .form_container {
     display: flex;
     flex-direction: column;
-    margin-left: 40rem;
-    
-    
+    justify-content:center;
+    width: 4rem;
+    margin-left: 5rem;
     
 }
 
-
+.form_container-sign {
+    margin-left: 15rem;
+}
 
 .form_container-sign-field {
     display: flex;
     flex-direction: column;
     width: 480px;
-    gap: 0.2rem;
-    
+    gap: 0.5rem;
 }
 
 .form_container-sign-field label {
-    
     font-family: vars.$font-secondary;
     margin-top: 0.5rem;
 }
@@ -66,57 +59,46 @@
     background-color: #FAEBD7;
 }
 
-#form_container-result {
+
+
+
+
+
+.form_container-result-list li {
     list-style-type: none;
-    width: 19rem;
-    height: 25rem;
+    line-height: 2rem;
+       
+}
+.liPhoto {
+    list-style-type: none;
 }
 
-#form_container-result h3 {
-    color: vars.$color-secondary;
-    font-family: vars.$font-main;
-    text-align: center;
+.form_container-result li {
     
-}
-#form_container-result li {
-    margin-top: 3rem;
     color: black;
     text-align: center;
     margin-bottom: 2rem;
     font-weight: bold;
-    
+     
 }
 
 input::placeholder {
     font-family: vars.$font-secondary;
 }
+
 //MEDIA QUERIES
 
-
 @media (min-width: 768px) {
-
-    
 
     .form_container {
         flex-direction: row;
     }
 
-    .form_container-sign {
-        width: 768px;
-        
-        
-        
-    }
-
     .form_container-sign-field {
-        flex-direction: row;
+        
     }
 
-   #form_container-result {
-    list-style-type: none;
-
-  
-   }
+   
     
 }
 
@@ -129,38 +111,20 @@ input::placeholder {
         
     }
 
-    .form_container-sign {
-        width: 768px;
-    }
-
     .form_container-sign-field {
         flex-direction: row;
         padding: 1rem;
         
     }
 
-    #form_container-result {
-        height: 10rem;
-        width: 30rem;
-        height: auto;
-        margin: 2rem;
-    }
-
-    .form {
-  
-    width: 80rem ;
-    height: 39rem;
-    }
+   
 }
-
-
-
 
 /* PANEL */
 .panel {
   width: 80rem;
-  margin-left: 17rem;
-  margin-top: -5rem;
+  
+ 
 }
 
 /* HEADER */
@@ -174,11 +138,10 @@ input::placeholder {
   display: flex;
   align-items: center;
   gap: 1rem;
-  color: black;
-  margin-top: 0.5rem;
-  font-family: vars.$font-main;
-  font-weight: 400;
-  font-size: 1.25rem;
+  color: vars.$color-secondary;
+  font-family: vars.$font-secondary;
+  font-weight: 800;
+  font-size: 1.5rem;
 }
 
 /* ICONO */
@@ -196,7 +159,7 @@ input::placeholder {
   border-right: 3px solid vars.$color-secondary;
   border-bottom: 3px solid vars.$color-secondary;
   transform: rotate(-135deg);
-  margin-left: 10px;
+  
   transition: transform 0.35s ease;
 }
 
