--- a/src/partials/form-checkbox.html
+++ b/src/partials/form-checkbox.html
@@ -5,6 +5,7 @@
         <div class="form-checkbox_titleAndIcon">
             <img src="/images/001-cocinando.png" class="panel-icon" alt="Icono ingredientes">
             <h3 class="form-checkbox_title">Elige tu propuesta de plato</h3>
+            <span class="arrow"></span>
         </div>
 
         <div class="form-checkbox_labels">
