--- a/src/partials/form-checkbox.html
+++ b/src/partials/form-checkbox.html
@@ -1,11 +1,12 @@
 <div class="page_form-checkbox"> 
 
-    <div class="form-checkbox">
-
-        <div class="form-checkbox_titleAndIcon">
-            <img src="/images/001-cocinando.png" class="panel-icon" alt="Icono ingredientes">
-            <h3 class="form-checkbox_title">Elige tu propuesta de plato</h3>
-            <span class="arrow"></span>
+    <div class="form-checkbox ">
+        <div >
+            <div class="form-checkbox_titleAndIcon">
+                <img src="/images/001-cocinando.png" class="panel-icon" alt="Icono ingredientes">
+                <h3 class="form-checkbox_title">Elige tu propuesta de plato</h3>
+                <span class="arrow newArrow"></span>
+            </div>
         </div>
 
         <div class="form-checkbox_labels">
