--- a/src/partials/share.html
+++ b/src/partials/share.html
@@ -4,7 +4,7 @@
     <div class="title">
       <img src="images/003-bandeja.png" class="panel-icon" alt="icono comparte">
       <span>Comparte</span>
-      <span class="arrow"></span>
+      <span class="arrow newArrow"></span>
     </div>
   </div>
 
