--- a/src/scss/layout/card-preview.scss
+++ b/src/scss/layout/card-preview.scss
@@ -114,9 +114,7 @@
 }
 
 .liPhoto{
-    
-    width: 180px;       
-    height: 240px;
+    list-style-type: none;
     overflow: hidden;
     
     #form_container-result-photo {
@@ -126,4 +124,11 @@
     }
 }
 
+.liPhoto-view {
+    width: 180px;       
+    height: 240px;
+}
 
+.hidden {
+    display: none;
+}
