Changes in Local Storage

--- a/src/partials/card-preview.html
+++ b/src/partials/card-preview.html
@@ -11,7 +11,7 @@
                         <li id="form_container-result-mail" class="style-preview"></li>
                     </div>
                     <li class="liPhoto">
-                        <img id="form_container-result-photo">
+                        <img id="form_container-result-photo" style="cursor:pointer">
                     </li>
                 </div>
     </ul>
