--- a/src/partials/form.html
+++ b/src/partials/form.html
@@ -21,7 +21,7 @@
 
                 <div class="form_container-sign-field">
                     <label for="file" >Foto plato</label>
-                    <input id="file" class="campo" type="file" accept="image/*" name="selectImage" data-id="form_container-result-photo"/>
+                    <input id="photoInput" class="campo" type="file" accept="image/*" name="selectImage" data-id="form_container-result-photo"/>
                 </div>
 
                 <div class="form_container-sign-field">
@@ -44,7 +44,7 @@
             </form>
         </div>
     </div>
-
+    
             
 </div>
 
