changes reset and scroll

--- a/src/partials/card-preview.html
+++ b/src/partials/card-preview.html
@@ -1,6 +1,6 @@
 <div class="card-preview">
 
-    <ul id="form_container-result" class="absolute">
+    <ul id="form_container-result" class="absolute preview-text">
                 <h3 class="fixed">Datos de información</h3>
                 <div class="form_container-result-preview">
                     <div class="form_container-result-list style-preview" >
