--- a/src/partials/card-preview.html
+++ b/src/partials/card-preview.html
@@ -18,7 +18,7 @@
 
     
     <div class="page_card-preview">
-        <div class=".blur"></div>
+        <div class="blur"></div>
         <img src='/images/Background-example.png' 
         alt="Fondo tarjeta resultado" 
         class="backgroundImage background1 style-preview-photo">
